--- a/custom/header.html
+++ b/custom/header.html
@@ -83,7 +83,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="br-right"><a $href="login"><i class="login-icon ti-user"></i>Login</a></li>
-                        <li class="sign-up"><a class="btn-signup red-btn" $href="sign-up"><span class="ti-briefcase"></span>Sign up</a></li> 
+                        <li class="sign-up"><a class="btn-signup red-btn" $href="register"><span class="ti-briefcase"></span>Sign up</a></li> 
                     </ul>
 
                 </ul>  
